--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,18 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "moduleFileExtensions": [
+      "js",
+      "json"],
+      "coverageDirectory": "./coverage",
+      "testPathIgnorePatterns": [
+        "/node_modules/"
+      ]
   },
   "keywords": [],
   "author": "",
@@ -19,6 +30,7 @@
     "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7"
   }
 }
