--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,22 +12,25 @@
     "testEnvironment": "node",
     "moduleFileExtensions": [
       "js",
-      "json"],
-      "coverageDirectory": "./coverage",
-      "testPathIgnorePatterns": [
-        "/node_modules/"
-      ]
+      "json"
+    ],
+    "coverageDirectory": "./coverage",
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mysql2": "^3.11.3",
     "sequelize": "^6.37.5",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
