--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -27,10 +27,12 @@
               }
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/rose-red.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
