--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,26 @@
-version: '3.8'
-
 services:
+  frontend:
+    build:
+      context: ./frontend  # Path to your Angular app folder
+      dockerfile: Dockerfile
+    ports:
+      - "4200:4200"  # Map host port 4200 to container port 4200
+
   backend:
     build:
       context: ./backend
     ports:
       - "3307:3307"
     environment:
-      - DB_HOST=db
+      - DB_HOST=localhost:3306  # Use the service name for MySQL
       - DB_USER=root
       - DB_PASSWORD="@Dancegym123"
       - DB_NAME=compound_lookup_db
       - PORT=3307
     depends_on:
-      - db
+      - db  # Ensures db starts before backend
+    networks:
+      - my_network  # Specify the custom network
 
   db:
     image: mysql:8.0
@@ -21,9 +28,14 @@ services:
       MYSQL_ROOT_PASSWORD: "@Dancegym123"
       MYSQL_DATABASE: compound_lookup_db
     ports:
-      - "3309:3306"
+      - "3309:3306"  # Expose MySQL on port 3309 externally
     volumes:
-      - db_data:/var/lib/mysql
+      - db_data:/var/lib/mysql  # Persist data
+    networks:
+      - my_network  # Specify the custom network
 
 volumes:
-  db_data:
+  db_data:  # Define a named volume for MySQL data
+
+networks:
+  my_network:  # Define a custom network
